--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/app.ts",
-    "start": "tsc -p && node ./dist/app.js",
-    "build": "tsc -p"
+    "start": "tsc && node ./dist/app.js",
+    "build": "tsc"
   },
   "author": "Valerio Figueira",
   "license": "ISC",
