--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.1",
     "express-session": "^1.17.3",
     "mysql2": "^3.3.3",
+    "pdf-parse": "^1.1.1",
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.4.2",
     "@types/express-session": "^1.17.7",
     "@types/mysql2": "github:types/mysql2",
     "nodemon": "^2.0.20",
