--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.3.3",
     "pdf-parse": "^1.1.1",
     "sequelize": "^6.33.0",
@@ -31,6 +32,7 @@
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.2",
     "@types/express-session": "^1.17.7",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/mysql2": "github:types/mysql2",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
