--- a/package.json
+++ b/package.json
@@ -33,10 +33,14 @@
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.2",
     "@types/express-session": "^1.17.7",
+    "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/mysql2": "github:types/mysql2",
     "@types/reflect-metadata": "^0.1.0",
-    "nodemon": "^2.0.20",
+    "@types/supertest": "^2.0.14",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
   }
 }
