--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/app.ts",
     "start": "tsc && node ./dist/app.js",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "author": "Valerio Figueira",
   "license": "ISC",
