--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/mysql2": "github:types/mysql2",
+    "@types/sequelize": "^4.28.16",
     "@types/supertest": "^2.0.14",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
