--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.3.3",
     "pdf-parse": "^1.1.1",
+    "pdfkit": "^0.14.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1",
@@ -38,6 +39,7 @@
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/mysql2": "github:types/mysql2",
+    "@types/pdfkit": "^0.13.3",
     "@types/sequelize": "^4.28.16",
     "@types/supertest": "^2.0.14",
     "nodemon": "^3.0.1",
