--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1",
     "typescript": "^5.0.4",
+    "winston": "^3.11.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@types/pdfkit": "^0.13.3",
     "@types/sequelize": "^4.28.16",
     "@types/supertest": "^2.0.14",
+    "@types/winston": "^2.4.4",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
