--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.1",
     "express-session": "^1.17.3",
@@ -34,6 +35,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
+    "@types/exceljs": "^1.3.0",
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.2",
     "@types/express-session": "^1.17.7",
