--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Valerio Figueira",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
@@ -20,6 +21,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.1",
     "express-session": "^1.17.3",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.3.3",
     "pdf-parse": "^1.1.1",
@@ -39,6 +41,7 @@
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.2",
     "@types/express-session": "^1.17.7",
+    "@types/express-winston": "^4.0.0",
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/mysql2": "github:types/mysql2",
