--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.3.3",
+    "mysqldump": "^3.2.0",
     "pdf-parse": "^1.1.1",
     "pdfkit": "^0.14.0",
     "reflect-metadata": "^0.1.13",
@@ -49,6 +50,7 @@
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/mysql2": "github:types/mysql2",
+    "@types/node": "^20.11.5",
     "@types/pdfkit": "^0.13.3",
     "@types/sequelize": "^4.28.16",
     "@types/supertest": "^2.0.14",
